# Tetris-C

./: CMakeLists.txt  README.md
src/: game.c  game.h  main.c  tetromino.c  tetromino.h
